--- a/style.css
+++ b/style.css
@@ -8,7 +8,6 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   margin: 0;
   display: grid;
-  place-items: center;
   min-height: 100vh;
   background-color: whitesmoke;
 }
@@ -88,8 +87,8 @@ input {
 
 /* form */
 .form {
-  width: clamp(320px, 30%, 430px);
-  margin: 0 auto;
+  max-width: 475px;
+  margin: 1rem auto;
   border: 1px solid #ccc;
   border-radius: .35rem;
   padding: 1.5rem;
@@ -134,6 +133,14 @@ input {
 .plus {
   display: flex;
   justify-content: space-between;
+}
+
+.plus-items {
+  width: 100%;
+}
+
+.plus-items input {
+  margin-bottom: 0.5rem;
 }
 
 .btn-add {
