--- a/style.css
+++ b/style.css
@@ -143,7 +143,12 @@ input {
   margin-bottom: 0.5rem;
 }
 
-.btn-add {
+.plus-btns-group {
+  display: flex;
+}
+
+.btn-add,
+.btn-remove {
   width: 1rem;
   height: 1rem;
   background-color: rgb(17, 88, 168);
